--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,16 +5,12 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Acessa ao banco de dados
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/fretes_infinity
-# spring.datasource.url=jdbc:mysql://host.docker.internal:3306/fretes_infinity
-
 # Usuário do banco de dados
 spring.datasource.username= MVC
-
 # Driver do banco de dados
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # configurações do console
-
 spring.output.ansi.enabled=always
 
 logging.level.web=info
@@ -24,4 +20,4 @@ logging.level.web=info
 
 springdoc.swagger-ui.path=/swagger-ui.html
 
-# server.servlet.context-path=/api
+server.servlet.context-path=/application
