--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,10 +16,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Set up QEMU (se necessário)
+    - name: Set up QEMU (if needed)
       uses: docker/setup-qemu-action@v2
 
-    - name: Set up Docker Buildx (se necessário)
+    - name: Set up Docker Buildx (if needed)
       uses: docker/setup-buildx-action@v1
 
     - name: Log in to Docker Hub
@@ -28,8 +28,7 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/my-image-name:latest
-
-    - name: Push the Docker image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/my-image-name:latest
+    - name: Build and push Docker image
+      run: |
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/my-image-name:latest .
+        docker push ${{ secrets.DOCKER_USERNAME }}/my-image-name:latest
