--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,20 +7,12 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
-
-    - name: Set up QEMU (if needed)
-      uses: docker/setup-qemu-action@v2
-
-    - name: Set up Docker Buildx (if needed)
-      uses: docker/setup-buildx-action@v1
+      uses: actions/checkout@v2
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
@@ -30,5 +22,5 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/my-image-name:latest .
-        docker push ${{ secrets.DOCKER_USERNAME }}/my-image-name:latest
+        docker build -t gustavonid/fretes_infinity:latest .
+        docker push gustavonid/fretes_infinity:latest
