--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,20 +7,12 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
-
-    - name: Set up QEMU (se necessário)
-      uses: docker/setup-qemu-action@v2
-
-    - name: Set up Docker Buildx (se necessário)
-      uses: docker/setup-buildx-action@v1
+      uses: actions/checkout@v2
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
@@ -28,8 +20,7 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/my-image-name:latest
-
-    - name: Push the Docker image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/my-image-name:latest
+    - name: Build and push Docker image
+      run: |
+        docker build -t gustavonid/fretes_infinity:latest .
+        docker push gustavonid/fretes_infinity:latest
