--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,11 @@ spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Acessa ao banco de dados
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/fretes_infinity
-# Usuário do banco de dados
-spring.datasource.username= MVC
-# Driver do banco de dados
+spring.datasource.url=jdbc:mysql://localhost:3306/your_database
+spring.datasource.username=your_user
+spring.datasource.password=your_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 # configurações do console
 spring.output.ansi.enabled=always
