--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,16 @@
 # Altera a estrutura da tabela caso a entidade tenha mudanças.
 spring.jpa.hibernate.ddl-auto=update
 
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
 # Acessa ao banco de dados
-spring.datasource.url=jdbc:mysql://localhost:3306/your_database
-spring.datasource.username=your_user
-spring.datasource.password=your_password
+spring.datasource.url=jdbc:mysql://mysql:3306/test
+spring.datasource.username=root
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 
 # configurações do console
 spring.output.ansi.enabled=always
 
 logging.level.web=info
 
-# spring.jpa.show-sql=true
-# logging.level.org.springframework=DEBUG
-
 springdoc.swagger-ui.path=/swagger-ui.html
-
 
