--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,11 @@
 spring.jpa.hibernate.ddl-auto=update
 
 # Acessa ao banco de dados
-spring.datasource.url=jdbc:mysql://mysql:3306/test
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://localhost:3306/your_database
+spring.datasource.username=your_user
+spring.datasource.password=your_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 # configurações do console
 spring.output.ansi.enabled=always
