--- a/.github/workflows/docker-image7.yml
+++ b/.github/workflows/docker-image7.yml
@@ -30,16 +30,16 @@ jobs:
         java-version: '17'
         distribution: 'adopt'
 
-    - name: Wait for MySQL to start
+    - name: Wait before checking MySQL connection
       run: sleep 30s
 
     - name: Check MySQL connection
       run: |
         sleep 20s # Aguarda 20 segundos para garantir que o MySQL tenha tempo para iniciar
-        docker exec $(docker ps -qf "name=mysql") mysql -h localhost -u your_user -p"your_password" -e "SHOW DATABASES;"
+        docker exec $(docker ps -qf "name=mysql") mysql -h localhost -u your_user -p"your_password" -e "SHOW DATABASES;" || true
 
     - name: Build with Maven
-      run: mvn clean package
+      run: mvn clean install -X
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
@@ -53,4 +53,4 @@ jobs:
         docker push ${{ secrets.DOCKER_USERNAME }}/fretes-infinity:latest
 
     - name: View MySQL logs
-      run: docker logs mysql
+      run: docker logs $(docker ps -qf "name=mysql")
