--- a/.github/workflows/docker-image7.yml
+++ b/.github/workflows/docker-image7.yml
@@ -31,7 +31,8 @@ jobs:
         distribution: 'adopt'
 
     - name: Check MySQL status
-      run: docker exec $(docker ps -qf "name=mysql") service mysql status
+      run: docker exec $(docker ps -qf "name=mysql") ps aux | grep mysqld
+
 
     - name: Check MySQL connection
       run: |
