--- a/.github/workflows/docker-image7.yml
+++ b/.github/workflows/docker-image7.yml
@@ -1,60 +1,30 @@
-name: Docker Build and MySQL
+name: Build and Push Docker Image
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
-  build-and-mysql:
+  build:
     runs-on: ubuntu-latest
 
-    services:
-      mysql:
-        image: mysql:latest
-        env:
-          MYSQL_ROOT_PASSWORD: root_password
-          MYSQL_DATABASE: your_database
-          MYSQL_USER: your_user
-          MYSQL_PASSWORD: your_password
-        ports:
-          - 3306/tcp
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-
     steps:
-    - name: Checkout code
+    - name: Checkout Repository
       uses: actions/checkout@v2
 
     - name: Set up JDK 17
       uses: actions/setup-java@v2
       with:
-        java-version: '17'
         distribution: 'adopt'
+        java-version: '17'
 
-    - name: Check MySQL status
-      run: docker exec $(docker ps -qf "name=mysql") mysqladmin ping -u your_user -p"your_password"
-
-
-
-    - name: Check MySQL connection
+    - name: Build Docker Image
       run: |
-        sleep 60s # Aumentado para 60 segundos
-        docker exec $(docker ps -qf "name=mysql") mysql -h localhost -u your_user -p"your_password" -e "SHOW DATABASES;" || true
+        docker build -t your-docker-image-name:latest .
+      working-directory: your/project/directory
 
-    - name: Build with Maven
+    - name: Push Docker Image to Registry
       run: |
-        env
-        mvn clean install -X
-
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Build and push Docker image
-      run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/fretes-infinity:latest .
-        docker push ${{ secrets.DOCKER_USERNAME }}/fretes-infinity:latest
-
-    - name: View MySQL logs
-      run: docker logs $(docker ps -qf "name=mysql")
+        echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+        docker push your-docker-image-name:latest
