--- a/.github/workflows/docker-image7.yml
+++ b/.github/workflows/docker-image7.yml
@@ -20,11 +20,13 @@ jobs:
         java-version: '17'
 
     - name: Build Docker Image
-      run: |
-        docker build -t your-docker-image-name:latest .
-      working-directory: your/project/directory
+      run: docker build -t gustavonid/fretes_infinity:latest .
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Push Docker Image to Registry
-      run: |
-        echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-        docker push your-docker-image-name:latest
+      run: docker push gustavonid/fretes_infinity:latest
