--- a/.github/workflows/docker-image7.yml
+++ b/.github/workflows/docker-image7.yml
@@ -9,32 +9,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    services:
-      mysql:
-        image: mysql:latest
-        env:
-          MYSQL_ROOT_PASSWORD: root_password
-          MYSQL_DATABASE: your_database
-          MYSQL_USER: your_user
-          MYSQL_PASSWORD: your_password
-        ports:
-          - 3306/tcp
-
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
 
-    - name: Set up JDK 17
+    - name: Set up JDK 17 and Docker
       uses: actions/setup-java@v2
       with:
         distribution: 'adopt'
         java-version: '17'
 
+    - name: Debug Project Structure
+      run: |
+        ls -R  # Lista o conteúdo do diretório
+        ls -l target  # Verifica as permissões do diretório target
+
     - name: Build Docker Image
       run: docker build -t gustavonid/fretes_infinity:latest .
-
-    - name: Check MySQL status
-      run: docker exec $(docker ps -qf "name=mysql") mysqladmin ping -u your_user -p"your_password"
+      working-directory: path/to/your/project/directory
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
