--- a/.github/workflows/docker-image7.yml
+++ b/.github/workflows/docker-image7.yml
@@ -19,14 +19,12 @@ jobs:
         distribution: 'adopt'
         java-version: '17'
 
-    - name: Debug Project Structure
-      run: |
-        ls -R  # Lista o conteúdo do diretório
-        ls -l target  # Verifica as permissões do diretório target
+    - name: Build with Maven
+      run: mvn clean install -B
 
     - name: Build Docker Image
       run: docker build -t gustavonid/fretes_infinity:latest .
-      working-directory: path/to/your/project/directory
+      working-directory: .
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
