--- a/.github/workflows/docker-image7.yml
+++ b/.github/workflows/docker-image7.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Build Docker Image
       run: docker build -t gustavonid/fretes_infinity:latest .
-      working-directory: .
+      working-directory: target
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
